--- a/src/main/resources/ucf/assignments/css/lightTableView.css
+++ b/src/main/resources/ucf/assignments/css/lightTableView.css
@@ -8,7 +8,7 @@
 
 .table-view .column-header .label {
   -fx-alignment: CENTER_LEFT;
-  -fx-text-fill: white;
+  -fx-text-fill: black;
   -fx-font-size: 17;
   -fx-opacity: 0.5;
   -fx-font-family: 'Segoe UI Light', Regular;
@@ -43,7 +43,7 @@
 }
 
 .table-row-cell: selected .text {
-    -fx-fill: #242636;
+    -fx-fill: #ffb6ff;
 }
 
 .table-row-cell {
@@ -55,7 +55,7 @@
 }
 
 .table-row-cell .text{
-    -fx-fill: white ;
+    -fx-fill: BLACK ;
     -fx-font-family: 'Segoe UI Light', Regular;
     -fx-font-size: 15;
 } 
