--- a/src/main/resources/ucf/assignments/PersonalInventory.fxml
+++ b/src/main/resources/ucf/assignments/PersonalInventory.fxml
@@ -40,7 +40,7 @@
                   <Image url="@../../../../../images/network1.png" />
                </image>
             </ImageView>
-            <Label layoutX="452.0" layoutY="18.0" prefHeight="30.0" prefWidth="97.0" text="s h e l v e d" textAlignment="CENTER" textFill="WHITE">
+            <Label fx:id="logoLabel" layoutX="452.0" layoutY="18.0" prefHeight="30.0" prefWidth="97.0" text="s h e l v e d" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Segoe UI Light" size="20.0" />
                </font>
@@ -57,7 +57,7 @@
       </AnchorPane>
       <Pane fx:id="inputPane" layoutX="29.0" layoutY="111.0" prefHeight="125.0" prefWidth="708.0" style="-fx-background-color: #211350; -fx-background-radius: 15; -fx-border-radius: 15;">
          <children>
-            <JFXButton fx:id="addButton" ellipsisString="" layoutX="573.0" layoutY="70.0" onAction="#addItemToTable" prefHeight="35.0" prefWidth="107.0" ripplerFill="#fb91ff" style="-fx-border-color: #6d2bf8; -fx-background-radius: 12; -fx-border-radius: 12; -fx-background-color: #211350;" text="Add Item         " textFill="WHITE">
+            <JFXButton fx:id="addButton" ellipsisString="" layoutX="573.0" layoutY="70.0" onAction="#addItemToTable" prefHeight="35.0" prefWidth="107.0" ripplerFill="#fb91ff" style="-fx-border-color: #6d2bf8; -fx-background-radius: 12; -fx-border-radius: 12; -fx-background-color: #211350;" text="Add Item   " textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Segoe UI Light" size="15.0" />
                </font>
@@ -98,11 +98,6 @@
                   <Font name="Segoe UI Light" size="15.0" />
                </font>
             </TextField>
-            <ImageView fitHeight="16.0" fitWidth="200.0" layoutX="651.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../images/plus.png" />
-               </image>
-            </ImageView>
             <TextField fx:id="snWordCount" alignment="CENTER_RIGHT" editable="false" layoutX="532.0" layoutY="52.0" prefHeight="21.0" prefWidth="149.0" style="-fx-text-fill: #6d2bf8; -fx-background-color: transparent;">
                <font>
                   <Font name="Segoe UI Light" size="10.0" />
