--- a/src/main/resources/ucf/assignments/css/tableview.css
+++ b/src/main/resources/ucf/assignments/css/tableview.css
@@ -93,5 +93,5 @@
     -fx-border-radius: 15;
     -fx-font-family: 'Segoe UI Light', Regular;
     -fx-text-fill: white;
-    -fx-background-color:  #211350;
+    -fx-background-color:  #1f1d2c;
 }
