fixed application name

--- a/src/main/resources/ucf/assignments/css/tableview.css
+++ b/src/main/resources/ucf/assignments/css/tableview.css
@@ -8,7 +8,7 @@
 
 .table-view .column-header .label {
   -fx-alignment: CENTER_LEFT;
-  -fx-text-fill: white;
+  -fx-text-fill: black;
   -fx-font-size: 17;
   -fx-opacity: 0.5;
   -fx-font-family: 'Segoe UI Light', Regular;
@@ -34,12 +34,12 @@
     -fx-padding: 10 0 10 10px;
 }
 .table-row-cell: hover {
-    -fx-background-color:  #211350;
+    -fx-background-color:  #242636;
     -fx-text-background-color: blue;
 }
 
 .table-row-cell: selected {
-    -fx-background-color:  #6d2bf8;
+    -fx-background-color:  #26aefb;
 }
 
 .table-row-cell: selected .text {
@@ -47,7 +47,7 @@
 }
 
 .table-row-cell {
-    -fx-background-color: #160f38;
+    -fx-background-color: #1f1d2c;
     -fx-background-insets: 0, 0 0 1 0;
     -fx-padding: 0em;
     -fx-background-radius: 30;
@@ -55,7 +55,7 @@
 }
 
 .table-row-cell .text{
-    -fx-fill: white ;
+    -fx-fill: BLACK ;
     -fx-font-family: 'Segoe UI Light', Regular;
     -fx-font-size: 15;
 } 
