--- a/src/main/resources/ucf/assignments/PersonalInventory.fxml
+++ b/src/main/resources/ucf/assignments/PersonalInventory.fxml
@@ -126,7 +126,7 @@
                   <Font name="Segoe UI Semilight" size="15.0" />
                </font>
             </TextField>
-            <Label layoutX="69.0" layoutY="5.0" opacity="0.5" text="Total" textFill="WHITE">
+            <Label fx:id="totalText" layoutX="69.0" layoutY="5.0" opacity="0.5" text="Total" textFill="WHITE">
                <font>
                   <Font name="Segoe UI Light" size="13.0" />
                </font>
