updated css - edit text on lightTableView is now black

--- a/src/main/resources/ucf/assignments/css/lightTableView.css
+++ b/src/main/resources/ucf/assignments/css/lightTableView.css
@@ -92,6 +92,6 @@
     -fx-background-radius: 15;
     -fx-border-radius: 15;
     -fx-font-family: 'Segoe UI Light', Regular;
-    -fx-text-fill: white;
+    -fx-text-fill: black;
     -fx-background-color:  #f6faff;
 }
